--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,115 +1,131 @@
 <div id="body-style">
   <h1>Produtos mais vendidos</h1>
-
   <h1>Vodka</h1>
 </div>
-<div class="organizacao-catalogo">
-  <div class="itemCatalgo">
-    <div class="image-center">
-      <img
-        src="../../assets/absolute-pears.png"
-      />
+<div id="divItensDrinks">
+  <div class="corpoDrinks">
+    <div class="divItemDrinksImagem">
+      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
     </div>
     <div>
-      <div class="div-catalogo-botton">
-        <p>Absolute Pears</p>
+      <p class="textDrinkInfo raleway">Absolute Pears</p>
+    </div>
+    <p class="textDrinkInfo poppins">R$: 199.99</p>
+    <div class="divButton">
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="corpoDrinks">
+    <div class="divItemDrinksImagem">
+      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+    </div>
+    <div>
+      <p class="textDrinkInfo raleway">Absolute Pears</p>
+    </div>
+    <p class="textDrinkInfo poppins">R$: 199.99</p>
+    <div class="divButton">
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="corpoDrinks">
+    <div class="divItemDrinksImagem">
+      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+    </div>
+    <div>
+      <p class="textDrinkInfo raleway">Absolute Pears</p>
+    </div>
+    <p class="textDrinkInfo poppins">R$: 199.99</p>
+    <div class="divButton">
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="corpoDrinks">
+    <div class="divItemDrinksImagem">
+      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+    </div>
+    <div>
+      <p class="textDrinkInfo raleway">Absolute Pears</p>
+    </div>
+    <p class="textDrinkInfo poppins">R$: 199.99</p>
+    <div class="divButton">
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="corpoDrinks">
+    <div class="divItemDrinksImagem">
+      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+    </div>
+    <div>
+      <p class="textDrinkInfo raleway">Absolute Pears</p>
+    </div>
+    <p class="textDrinkInfo poppins">R$: 199.99</p>
+    <div class="divButton">
+      <button>COMPRAR</button>
+    </div>
+  </div>
+</div>
+<div id="body-style">
+  <h1>Gin</h1>
+  <div id="divItensDrinks">
+    <div class="corpoDrinks">
+      <div class="divItemDrinksImagem">
+        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
       </div>
-      <div class="div-catalogo-botton">
-        <p class="preco-catalogo">R$: 199:99</p>
+      <div>
+        <p class="textDrinkInfo raleway">Absolute Pears</p>
       </div>
-      <div class="div-button-compras">
-        <button class="button-compras"> COMPRAR</button>
+      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <div class="divButton">
+        <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="corpoDrinks">
+      <div class="divItemDrinksImagem">
+        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      </div>
+      <div>
+        <p class="textDrinkInfo raleway">Absolute Pears</p>
+      </div>
+      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <div class="divButton">
+        <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="corpoDrinks">
+      <div class="divItemDrinksImagem">
+        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      </div>
+      <div>
+        <p class="textDrinkInfo raleway">Absolute Pears</p>
+      </div>
+      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <div class="divButton">
+        <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="corpoDrinks">
+      <div class="divItemDrinksImagem">
+        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      </div>
+      <div>
+        <p class="textDrinkInfo raleway">Absolute Pears</p>
+      </div>
+      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <div class="divButton">
+        <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="corpoDrinks">
+      <div class="divItemDrinksImagem">
+        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      </div>
+      <div>
+        <p class="textDrinkInfo raleway">Absolute Pears</p>
+      </div>
+      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <div class="divButton">
+        <button>COMPRAR</button>
       </div>
     </div>
   </div>
 </div>
-<div class="organizacao-catalogo">
-  <div class="itemCatalgo">
-    <div class="image-center">
-      <img
-        src="../../assets/absolute-mango.png"
-      />
-    </div>
-    <div>
-      <div class="div-catalogo-botton">
-        <p>Absolute Pears</p>
-      </div>
-      <div class="div-catalogo-botton">
-        <p class="preco-catalogo">R$: 199:99</p>
-      </div>
-      <div class="div-button-compras">
-        <button class="button-compras"> COMPRAR</button>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="organizacao-catalogo">
-  <div class="itemCatalgo">
-    <div class="image-center">
-      <img
-        src="../../assets/absolute-raspberri.png"
-      />
-    </div>
-    <div>
-      <div class="div-catalogo-botton">
-        <p>Absolute Pears</p>
-      </div>
-      <div class="div-catalogo-botton">
-        <p class="preco-catalogo">R$: 199:99</p>
-      </div>
-      <div class="div-button-compras">
-        <button class="button-compras"> COMPRAR</button>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="organizacao-catalogo">
-  <div class="itemCatalgo">
-    <div class="image-center">
-      <img
-        src="../../assets/absolute-apeach.png"
-      />
-    </div>
-    <div>
-      <div class="div-catalogo-botton">
-        <p>Absolute Pears</p>
-      </div>
-      <div class="div-catalogo-botton">
-        <p class="preco-catalogo">R$: 199:99</p>
-      </div>
-      <div class="div-button-compras">
-        <button class="button-compras"> COMPRAR</button>
-      </div>
-    </div>
-  </div>
-</div>
-  <div>
-    <h1>Gim</h1>
-  <div class="container text-center">
-    <div class="row align-items-start">
-      <div class="col">
-        <img
-        src="../../assets/absolute-pears.png"
-      />
-    </div>
-    <div>
-      <div class="div-catalogo-botton">
-        <p>Absolute Pears</p>
-      </div>
-      <div class="div-catalogo-botton">
-        <p class="preco-catalogo">R$: 199:99</p>
-      </div>
-      <div class="div-button-compras">
-        <button class="button-compras"> COMPRAR</button>
-      </div>
-      <div class="col">
-        One of three columns
-      </div>
-      <div class="col">
-        One of three columns
-      </div>
-      <div class="col">
-        One of three columns
-      </div>
-    </div>
-  </div>
