--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -20,10 +20,11 @@ button {
   font-weight: 400;
   line-height: normal;
   width: 150px;
-  height: 31px; 
+  height: 31px;
   border-radius: 10px;
   background: #099330;
-
+  border: 0;
+  outline: none;
 }
 
 #divItensDrinks{
@@ -31,7 +32,7 @@ button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  
+
 
 
 }
