--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,45 @@
-<H1>Faça seu pedido personalizado aqui</H1>
+<div>
+  <h1>Ofertas Especiais</h1>
+  <ul>
+      <li *ngFor="let BebidasEspeciais of ">
+          {{ oferta.produto }} - {{ oferta.detalhes }} - {{ oferta.preco }}
+      </li>
+  </ul>
+
+
+  <h2>Selecione mua marca de bebida favorita</h2>
+  <select [(ngModel)]="MarcaSelecionada" (change)="updateListaModelo()">
+      <option value="">-- Selecione a Marca --</option>
+      <option *ngFor="let celular of " [ngValue]="celular">{{ celular.marca }}</option>
+  </select>
+
+  <h2>Selecione o Modelo</h2>
+  <select [(ngModel)]="ModeloSelecionado">
+      <option value="">-- Selecione o Modelo --</option>
+      <option *ngFor="let tipos of "tipos [ngValue]="modelo">{{ modelo.nome }}</option>
+  </select>
+
+
+
+  <div *ngIf="ModeloSelecionado">
+      <h3>Detalhes do Produto Selecionado:</h3>
+      <p>Marca: {{ MarcaSelecionada?.marca }}</p>
+      <p>Modelo: {{ ModeloSelecionado.nome }}</p>
+      <p>Preço: {{ ModeloSelecionado.preco }}</p>
+  </div>
+
+
+  <h2>Cadastrar Desejo Manualmente</h2>
+<input type="text" [(ngModel)]="DesejoUsuario" placeholder="Digite seu desejo...">
+<button (click)="AdicionarDesejo()">Cadastrar</button>
+<button (click)="LimparListaDesejo()">Limpar Campo</button> <!-- Novo botão para limpar o campo -->
+
+
+<h2>Lista de Desejos</h2>
+<ul>
+<li *ngFor="let desejo of desejos">{{ desejo }}</li>
+</ul>
+
+<button (click)="LimparDesejos()">Limpar Lista de Desejos</button> <!-- Novo botão para limpar a lista de desejos -->
+
+
