--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -5,7 +5,7 @@
 <div id="divItensDrinks">
   <div class="corpoDrinks">
     <div class="divItemDrinksImagem">
-      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      <img class="imageDrinks" src="../../assets/absolutVodka1.png" />
     </div>
     <div>
       <p class="textDrinkInfo raleway">Absolute Pears</p>
@@ -17,10 +17,10 @@
   </div>
   <div class="corpoDrinks">
     <div class="divItemDrinksImagem">
-      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      <img class="imageDrinks" src="../../assets/absolutVodka2.png" />
     </div>
     <div>
-      <p class="textDrinkInfo raleway">Absolute Pears</p>
+      <p class="textDrinkInfo raleway">Absolute Mango</p>
     </div>
     <p class="textDrinkInfo poppins">R$: 199.99</p>
     <div class="divButton">
@@ -29,10 +29,10 @@
   </div>
   <div class="corpoDrinks">
     <div class="divItemDrinksImagem">
-      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      <img class="imageDrinks" src="../../assets/AbsolutVodka3.png" />
     </div>
     <div>
-      <p class="textDrinkInfo raleway">Absolute Pears</p>
+      <p class="textDrinkInfo raleway">Absolut Raspberri</p>
     </div>
     <p class="textDrinkInfo poppins">R$: 199.99</p>
     <div class="divButton">
@@ -41,10 +41,10 @@
   </div>
   <div class="corpoDrinks">
     <div class="divItemDrinksImagem">
-      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      <img class="imageDrinks" src="../../assets/AbsolutVodka4.png" />
     </div>
     <div>
-      <p class="textDrinkInfo raleway">Absolute Pears</p>
+      <p class="textDrinkInfo raleway">Absolute Apeach</p>
     </div>
     <p class="textDrinkInfo poppins">R$: 199.99</p>
     <div class="divButton">
@@ -53,12 +53,12 @@
   </div>
   <div class="corpoDrinks">
     <div class="divItemDrinksImagem">
-      <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+      <img class="imageDrinks" src="../../assets/absolutVodka5.png" />
     </div>
     <div>
-      <p class="textDrinkInfo raleway">Absolute Pears</p>
+      <p class="textDrinkInfo raleway">Absolute No Label</p>
     </div>
-    <p class="textDrinkInfo poppins">R$: 199.99</p>
+    <p class="textDrinkInfo poppins">R$: 299.99</p>
     <div class="divButton">
       <button>COMPRAR</button>
     </div>
@@ -69,60 +69,60 @@
   <div id="divItensDrinks">
     <div class="corpoDrinks">
       <div class="divItemDrinksImagem">
-        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+        <img class="imageDrinks" src="../../assets/gin1.png" />
       </div>
       <div>
-        <p class="textDrinkInfo raleway">Absolute Pears</p>
+        <p class="textDrinkInfo raleway">Gin Vanfall London Dry </p>
       </div>
-      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <p class="textDrinkInfo poppins">R$: 399.99</p>
       <div class="divButton">
         <button>COMPRAR</button>
       </div>
     </div>
     <div class="corpoDrinks">
       <div class="divItemDrinksImagem">
-        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+        <img class="imageDrinks" src="../../assets/gin3.png" />
       </div>
       <div>
-        <p class="textDrinkInfo raleway">Absolute Pears</p>
+        <p class="textDrinkInfo raleway">Gin Las Californias</p>
       </div>
-      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <p class="textDrinkInfo poppins">R$: 299.99</p>
       <div class="divButton">
         <button>COMPRAR</button>
       </div>
     </div>
     <div class="corpoDrinks">
       <div class="divItemDrinksImagem">
-        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+        <img class="imageDrinks" src="../../assets/gin5.png" />
       </div>
       <div>
-        <p class="textDrinkInfo raleway">Absolute Pears</p>
+        <p class="textDrinkInfo raleway">Gin Floral Folivora</p>
       </div>
-      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <p class="textDrinkInfo poppins">R$: 149.99</p>
       <div class="divButton">
         <button>COMPRAR</button>
       </div>
     </div>
     <div class="corpoDrinks">
       <div class="divItemDrinksImagem">
-        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+        <img class="imageDrinks" src="../../assets/gin6.png" />
       </div>
       <div>
-        <p class="textDrinkInfo raleway">Absolute Pears</p>
+        <p class="textDrinkInfo raleway">Gin Tanqueray </p>
       </div>
-      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <p class="textDrinkInfo poppins">R$: 249.99</p>
       <div class="divButton">
         <button>COMPRAR</button>
       </div>
     </div>
     <div class="corpoDrinks">
       <div class="divItemDrinksImagem">
-        <img class="imageDrinks" src="../../assets/absolute-mango.png" />
+        <img class="imageDrinks" src="../../assets/gin7.png" />
       </div>
       <div>
-        <p class="textDrinkInfo raleway">Absolute Pears</p>
+        <p class="textDrinkInfo raleway">Gin Bombay Sapphire</p>
       </div>
-      <p class="textDrinkInfo poppins">R$: 199.99</p>
+      <p class="textDrinkInfo poppins">R$: 239.99</p>
       <div class="divButton">
         <button>COMPRAR</button>
       </div>
