--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,7 +28,7 @@
 <div *ngIf="TipoModeloSelecionado">
     <h2>Detalhes da sua bebida</h2>
     <p>Tipo: {{TipoMarcaSelecionados.marca}}</p>
-    <p>:Marca {{TipoModeloSelecionado.nome}}</p>
+    <p>Marca: {{TipoModeloSelecionado.nome}}</p>
     <p>Preço: {{TipoModeloSelecionado.preco}}</p>
 </div>
 
