--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,3 +33,24 @@
 </div>
 
 
+<div class="pedidosManuais">
+
+    
+<h2 >Quais tipos de bebidas voce quer ver aqui na Castis Drinks?</h2>
+<input type="text" [(ngModel)]="DesejoUsuario" placeholder="Digite seu desejo...">
+<button (click)="AdicionarDesejo()">Cadastrar</button>
+<button (click)="LimparListaDesejo()">Limpar Campo</button>
+
+
+
+<h2>Lista de Desejos</h2>
+<ul>
+  <li *ngFor="let desejo of desejos">{{ desejo }}</li>
+</ul>
+
+<button (click)="LimparDesejos()">Limpar Lista de Desejos</button>
+
+</div>
+
+
+
