--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -36,7 +36,7 @@
 <div class="pedidosManuais">
 
     
-<h2 >Quais tipos de bebidas voce quer ver aqui na Castis Drinks?</h2>
+<h2 >Quais tipos de bebidas você quer ver aqui na Castis Drinks?</h2>
 <input type="text" [(ngModel)]="DesejoUsuario" placeholder="Digite seu desejo...">
 <button (click)="AdicionarDesejo()">Cadastrar</button>
 <button (click)="LimparListaDesejo()">Limpar Campo</button>
