--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<header>
-  <app-header></app-header>
-</header>
-<body>
-  <app-banner></app-banner>
-  <app-body></app-body>
-  <app-footer></app-footer>
-</body>
+<app-header></app-header>
+<router-outlet></router-outlet>
