--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,13 +2,13 @@
     <div id="Header">
         <img src="../../assets/Castis-Drinks-logo.png">
         <nav>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-            <li>Order</li>
+            <li><a routerLink="/">Home</a></li>
+            <li><a  routerLink="/">About</a></li>
+            <li><a  routerLink="/">Contact</a></li>
+            <li><a  routerLink="/">Order</a></li>
         </nav>
         <div>
-            <li id="singIn">Sign in/ Login</li>
+            <a routerLink="/Cadastro">Sign in/ Login</a>
         </div>
     </div>
 </header>
