router-outlet funcionando

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
             <li><a  routerLink="/">Order</a></li>
         </nav>
         <div>
-            <a routerLink="/Cadastro">Sign in/ Login</a>
+            <a routerLink="/cadastro">Sign in/ Login</a>
         </div>
     </div>
 </header>
