--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -1,8 +1,124 @@
-body{
-    height: 100%;
-    margin: 0;
+*{
+    font-family: Raleway;
+    color: #ffffff;
+}
+
+
+
+body {
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background: #373737;
+  background: cover;
+}
+
+h1 {
+  text-align: center;
+  font-family: Raleway;
+  font-size: 30px;
+  margin-top: 70px;
+}
+
+p {
+  text-align: center;
+  font-family: Raleway;
+  
+}
+
+fieldset{
+    min-width: 0;
     padding: 0;
-    background: #ffffff;
+    margin: 0px;
+    border: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+fieldset .grupo{
+    float: 1em;
+    margin-right: 1em;
+    margin-top: 1px;
+    gap: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.divForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form {
+  margin-top: 30px;
+  background-color: #666666;
+  display: flex;
+  width: 751px;
+  height: 725px;
+  padding: 25px 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  flex-shrink: 0;
+  border-radius: 40px;
+}
+
+input, select, textarea, button{
+    border-radius: 5px;
+}
+
+.grupo input{
+    padding: 0.2em;
+    display: block;
+
+}
+
+.grupo select option{
+    padding: 1em;
+}
+
+select{
+    background-color: #666666;
+    border: solid black 1.5px;
+    width: 190px;
+    height: 35px;
+    
     
 }
+
+.grupo input:focus, .campo select:focus{
+    background: #D9D9D9;
+}
+
+
+
+.divSexo{
+    display: grid;
+    gap: 5px;
+}
+
+.divEstado{
+    display: grid;
+    gap: 5px;
+}
+
+button{
+    font-size: 1.2em;
+    border: solid #373737 1.5px;
+    margin-bottom: 1em;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    color: black;
+    }
+
+
+
+
 
