--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,53 +1,56 @@
 <body>
-    <div>
-        <h1>Cadastro de Usuario</h1>
-        <p>Complete suas informações</p>
-        <br>
-    </div>
-
+  <div class="divForm">
     <form>
-        <fieldset>
-            <div>
-                <label>Nome</label>
-                <input type="text" name="nome" id="nome">
-            </div>
+      <div>
+        <h1>Cadastro de Usuario</h1>
+        <div>
+          <p>Complete suas informações</p>
+        </div>
+      </div>
 
-            <div>
-                <label>Sobrenome</label>
-                <input type="text" name="sobrenome" id="sobrenome">
-            </div>
-        </fieldset>
+      <fieldset class="grupo">
+        <div>
+          <label for="name">Nome</label>
+          <input type="text" name="nome" id="nome" required />
+        </div>
 
+        <div>
+          <label for="sobrenome">Sobrenome</label>
+          <input type="text" name="sobrenome" id="sobrenome" required />
+        </div>
         <div>
             <label>Email</label>
-            <input type="email" name="email" id="email">
-        </div>
-
-        <div>
+            <input type="email" name="email" id="email" required />
+          </div>
+          <div>
+            <label>Senha</label>
+            <input type="senha" name="senha" id="senha" />
+          </div>
+    
+          <div class="divSexo">
             <label>Qual é seu sexo?</label>
-            <label>
-                <input type="radio" name="masculino" value="masculino">Masculino
-            </label>
-            <label>
-                <input type="radio" name="feminino" value="feminino">Feminino
-            </label>
-            <label>
-                <input type="radio" name="naoDefinido" value="naoDefinido">Não definido
-            </label>
-        </div>
-
-        <div>
-            <label>Estado</label>
-            <select  id="Estado">
+            <select id="Sexo">
                 <option selected disabled value="">Selecione seu estado</option>
-                <option>SP</option>
-                <option>RJ</option>
-                <option>MG</option>
+                <option>Masculino</option>
+                <option>Feminino</option>
+                <option>Prefiro não informar</option>
+              </select>
+          </div>
+    
+          <div class="divEstado">
+            <label>Estado</label>
+            <select id="Estado">
+              <option selected disabled value="">Selecione seu estado</option>
+              <option>SP</option>
+              <option>RJ</option>
+              <option>MG</option>
             </select>
-            
-
-        </div>
-
+          </div>
+      </fieldset>
+      <div>
+        <button>Enviar</button>
+      </div>
+      
     </form>
-
+  </div>
 </body>
