--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -19,38 +19,37 @@
           <input type="text" name="sobrenome" id="sobrenome" required />
         </div>
         <div>
-            <label>Email</label>
-            <input type="email" name="email" id="email" required />
-          </div>
-          <div>
-            <label>Senha</label>
-            <input type="senha" name="senha" id="senha" />
-          </div>
-    
-          <div class="divSexo">
-            <label>Qual é seu sexo?</label>
-            <select id="Sexo">
-                <option selected disabled value="">Selecione seu estado</option>
-                <option>Masculino</option>
-                <option>Feminino</option>
-                <option>Prefiro não informar</option>
-              </select>
-          </div>
-    
-          <div class="divEstado">
-            <label>Estado</label>
-            <select id="Estado">
-              <option selected disabled value="">Selecione seu estado</option>
-              <option>SP</option>
-              <option>RJ</option>
-              <option>MG</option>
-            </select>
-          </div>
+          <label>Email</label>
+          <input type="email" name="email" id="email" required />
+        </div>
+        <div>
+          <label>Senha</label>
+          <input type="password" id="pwd" />
+          <input type="checkbox" id="chk" onclick="showPassword()"/> Show Password
+        </div>
+        <div class="divSexo">
+          <label>Qual é seu sexo?</label>
+          <select id="Sexo">
+            <option selected disabled value="">Selecione seu estado</option>
+            <option>Masculino</option>
+            <option>Feminino</option>
+            <option>Prefiro não informar</option>
+          </select>
+        </div>
+
+        <div class="divEstado">
+          <label>Estado</label>
+          <select id="Estado">
+            <option selected disabled value="">Selecione seu estado</option>
+            <option>SP</option>
+            <option>RJ</option>
+            <option>MG</option>
+          </select>
+        </div>
       </fieldset>
       <div>
         <button>Enviar</button>
       </div>
-      
     </form>
   </div>
 </body>
