--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -24,8 +24,13 @@
         </div>
         <div>
           <label>Senha</label>
-          <input type="password" id="pwd" />
-          <input type="checkbox" id="chk" onclick="showPassword()"/> Show Password
+          <div>
+            <div class="divCkeckBox">
+            <input type="password" id="pwd" />
+              <input type="checkbox" id="chk" onclick="showPassword()" /> Show
+              Password
+            </div>
+          </div>
         </div>
         <div class="divSexo">
           <label>Qual é seu sexo?</label>
