--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -60,7 +60,7 @@ form {
   background-color: #666666;
   display: flex;
   width: 751px;
-  height: 725px;
+  height: auto;
   padding: 25px 30px;
   flex-direction: column;
   justify-content: center;
@@ -69,6 +69,7 @@ form {
   flex-shrink: 0;
   border-radius: 40px;
 }
+
 
 .divCkeckBox{
     display: flex;
