add tela contact us

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
         <nav>
             <li><a routerLink="/">Home</a></li>
             <li><a  routerLink="/">About</a></li>
-            <li><a  routerLink="/">Contact</a></li>
+            <li><a  routerLink="/contactUs">Contact</a></li>
             <li><a  routerLink="/">Order</a></li>
         </nav>
         <div>
