tela de contact

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,7 +1,26 @@
 <body>
-    <div >
-        <div>
-            <h1 >Contact Us</h1>
-        </div>
+  <div >
+    <h1 class="titleContactUS" >Contact Us</h1>
+  </div>
+  <div class="divInputs">
+  <div class="divInput">
+      <label>Your name*</label>
+      <input type="text">
+    </div>
+    <div class="divInput">
+        <label>Your Email *</label>
+        <input type="text" >
+      </div> 
+</div>
+    <div class="divInput2">
+        <label>Your Phone Number *</label>
+        <input type="text" >
+    </div>
+    <div class="divInput2">
+        <label>Your Phone Number *</label>
+        <input class="inputMind"   type="text" >
+    </div>
+    <div class="divButon">
+        <button class="buttonActive">Submit</button>
     </div>
 </body>
