--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -1,11 +1,14 @@
+
 body {
   height: 100%;
-  align-items: center;
-  justify-content: center;
   margin: 0;
   padding: 0;
   background: #373737;
   background: cover;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding-left: 300px;
 }
 
 h1 {
@@ -20,6 +23,81 @@ h1 {
 
 .titleContactUS{
     margin-top: 100px;
-    margin-left: 95px;
+    margin-left: -800px;
 }
+
+label{
+  color: #fff;
+  font-family: Raleway;
+  font-size: 15px;
+}
+
+.divInputs{
+  margin-top: 75px;
+  flex-direction: row;
+  display: flex;
+ 
+}
+
+.divInput{
+  flex-direction: column;
+  display: flex;
+  margin-left: 100px;
+}
+
+.divInput2{
+  margin-top: 40px;
+  flex-direction: column;
+  display: flex;
+  margin-left: 100px;
+
+}
+
+.divInput3{
+  margin-top: 40px;
+  flex-direction: column;
+  display: flex;
+  margin-left: 100px;
+
+}
+
+
+
+input{
+  width: 449px;
+  height: 50px; 
+  border-radius: 4px;
+  border: 1px solid  #A2A6B0;
+  background: #FFF;
+}
+
+.inputMind{
+  width: 925px;
+  height: 236px;      
+}
+
+.divButon{
+  margin-left: 100px;
+  margin-top: 50px;
+}
+
+button{
+  width: 151px;
+  height: 50px;
+  color: #000000;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border-radius: 50px;
+  border-style: none;
+}
+
+.buttonActive :active{
+  color: green;
+}
+
+
 
