--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -5,20 +5,20 @@
   <div class="divInputs">
   <div class="divInput">
       <label>Your name*</label>
-      <input type="text">
+      <input type="text" placeholder="Your Name">
     </div>
     <div class="divInput">
         <label>Your Email *</label>
-        <input type="text" >
+        <input type="text" placeholder="Your Email">
       </div> 
 </div>
     <div class="divInput2">
         <label>Your Phone Number *</label>
-        <input type="text" >
+        <input type="text" placeholder="Your Phone">
     </div>
     <div class="divInput2">
         <label>Your Phone Number *</label>
-        <input class="inputMind"   type="text" >
+        <input class="inputMind"   type="text"  placeholder="Jot us a note and we’ll get back to you as quickly as possible" >
     </div>
     <div class="divButon">
         <button class="buttonActive">Submit</button>
