att typeScript input password

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -27,7 +27,7 @@
           <div>
             <input type="password" id="pwd" />
             <div class="divCkeckBox">
-            <input type="checkbox" id="chk" onclick="showPassword()" /> Show
+            <input type="checkbox" id="chk" (click)=showPassword() /> Show
               Password
             </div>
           </div>
