--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <img src="../../assets/Castis-Drinks-logo.png">
         <nav>
             <li><a routerLink="/">Home</a></li>
-            <li><a  routerLink="/">About</a></li>
+            <li><a  routerLink="/conecta">About</a></li>
             <li><a  routerLink="/contactUs">Contact</a></li>
             <li><a  routerLink="/shopcard">Order</a></li>
         </nav>
